--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "preact": "^10.19.3",
         "preact-render-to-string": "^6.3.1",
         "rehype-highlight": "^7.0.2",
+        "rehype-slug": "^6.0.0",
         "rehype-stringify": "^10.0.0",
         "remark-gfm": "^4.0.1",
         "remark-parse": "^11.0.0",
