--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "autoprefixer": "^10.4.16",
         "chokidar": "^5.0.0",
         "postcss": "^8.4.33",
+        "sharp": "^0.34.5",
         "tailwindcss": "^3.4.1",
         "tsx": "^4.7.0",
         "typescript": "^5.3.3",
